Hopefully fixed blue button text on mobile

--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,7 @@ h3 {
     border-radius: 10px;
     text-decoration: none;
     background-color: white;
+    color: #222;
     box-shadow: #222 5px 5px 2px;
     margin: 3px;
     border: #222 1px solid;
